<resources>
    <string name="app_name">美志愿</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="use_following_quick_login">使用以下账号快速登录</string>
    <string name="confirm">确定</string>
    <string name="user_info">账号信息</string>
    <string name="personal_volunteer">个人志愿者</string>
    <string name="volunteer_group">志愿者团体</string>
    <string name="hangzhou">杭州</string>
    <string name="m_volunteer">美志愿</string>
    <string name="search">搜索</string>
    <string name="please_input_interested_activity">请输入感兴趣的活动</string>
    <string name="search_history">&#160;&#160;搜索历史</string>
    <string name="clear_search_history">清除搜索历史</string>
    <string name="sign_in">签到</string>
    <string name="please_input_activity_code">请输入活动编码</string>
    <string name="code_is_six_digits_from_activity_publisher">编码为6位数字 由活动发布者告知</string>
    <string name="please_input_code">请输入编码</string>
    <string name="search_result">搜索结果</string>
    <string name="activity">活动</string>
    <string name="activity_detail">活动详情</string>
    <string name="i_want_to_enroll">我要报名</string>
    <string name="enrolled_volunteer">已报名志愿者</string>
    <string name="logout">退出登录</string>
    <string name="certificate_request">证书申请</string>
    <string name="service_record">服务记录</string>
    <string name="my_activity">我的活动</string>
    <string name="feedback">留言反馈</string>
    <string name="about_m_volunteer">关于美志愿</string>
    <string name="publish_activity">发布活动</string>
    <string name="publish">发布</string>
    <string name="recruit_time">招募时间：</string>
    <string name="activity_time">活动时间：</string>
    <string name="manage_activity">管理活动</string>
    <string name="my_member">我的成员</string>
    <string name="organization_info"><![CDATA[组织信息 >]]></string>
    <string name="tribe">群组</string>
    <string name="circle">圈子</string>
    <string name="interview_manage">面试管理</string>
    <string-array name="service_type">
        <item>青少年服务</item>
        <item>敬老助残</item>
        <item>扶贫帮困</item>
        <item>文明礼仪</item>
        <item>平安守护</item>
        <item>环境保护</item>
        <item>文化体育</item>
        <item>便民服务</item>
    </string-array>
</resources>
