<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_choose_role"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.zheteng123.m_volunteer.ui.chooserole.ChooseRoleActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/shape_choose_role"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/personal_volunteer"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/shape_choose_role"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/volunteer_group"
        android:textSize="25sp"
        android:textColor="#FFFFFF"/>

</LinearLayout>
