<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.zheteng123.m_volunteer.ui.login.LoginActivity"
    android:orientation="vertical"
    android:background="#F7F7F7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_centerInParent="true"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:background="@null"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/default_avatar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="10dp"
        android:textColorHint="#DDDDDD"
        android:layout_margin="1dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="#FFFFFF"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginBottom="10dp"
        android:textColorHint="#DDDDDD"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:background="@drawable/shape_button_border_radius"
        android:textColor="#FFFFFF"
        android:layout_margin="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_gravity="end"
        android:text="@string/forget_password"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_following_quick_login"
        android:gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/quick_login_weixin"
            android:layout_margin="30dp"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/iv_weibo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/quick_login_weibo"
            android:layout_margin="30dp"
            android:layout_toLeftOf="@id/iv_wechat"
            android:layout_toStartOf="@id/iv_wechat"/>

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/quick_login_qq"
            android:layout_margin="30dp"
            android:layout_toRightOf="@id/iv_wechat"
            android:layout_toEndOf="@id/iv_wechat"/>
    </RelativeLayout>
</LinearLayout>
