<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@color/layoutBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--头部开始-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/user_center_background1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_avatar"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/default_avatar"
                android:layout_marginTop="45dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFFFFF"/>

            <TextView
                android:id="@+id/tv_organization_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="富春街道"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization_info"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <!--头部结束-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_manage_activity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_activity_green"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manage_activity"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_right_grey"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#B5B1AB"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:id="@+id/ll_my_member"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_member"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/my_member"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_right_grey"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#B5B1AB"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:id="@+id/ll_interview_manage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_interview"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/interview_manage"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_right_grey"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_message_green"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_right_grey"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#B5B1AB"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_about_green"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_m_volunteer"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"/>

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_right_grey"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/shape_logout_button"
            android:text="@string/logout"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10dp"/>

    </LinearLayout>

</ScrollView>